--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,17 +1,34 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
+
 on:
-  # Schedule daily updates
-  schedule: [{ cron: "0 0 * * *" }]
-  # (optional) Run workflow manually
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # 允许手动运行和提交触发
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: { branches: ["master", "main"] }
+  push: {branches: ["master", "main"]}
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write  # 需要写入权限来提交更改
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # GitHub Token
           token: ${{ secrets.METRICS_TOKEN }}
+
+          # 输出到仓库
+          output_action: commit
+          output_path: asset/metrics.svg   # 指定输出文件路径
+          commit_message: "📊 Update GitHub metrics"
+
+          # Metrics 配置
+          user: GamerMMM
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Shanghai
+          plugin_calendar: yes
+          plugin_calendar_limit: 1
+
