--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # GitHub Token
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS_ACTIOPN }}
 
           # 输出到仓库
           output_action: commit
