--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,34 +1,141 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
-name: Metrics
+# 此开源项目地址 https://github.com/lowlighter/metrics
+
+name: GitHub Metrics
 
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # 允许手动运行和提交触发
+  schedule:
+    - cron: "0 0 * * *"
+    # https://docs.github.com/zh/actions/using-workflows/events-that-trigger-workflows#schedule
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
 
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # 需要写入权限来提交更改
     steps:
-      - uses: lowlighter/metrics@latest
+      # 基础信息（顺带了几个小插件）
+      - name: base
+        uses: lowlighter/metrics@latest
         with:
-          # GitHub Token
-          token: ${{ secrets.METRICS_ACTIOPN }}
-
-          # 输出到仓库
-          output_action: commit
-          output_path: asset/metrics.svg   # 指定输出文件路径
-          commit_message: "📊 Update GitHub metrics"
-
-          # Metrics 配置
+          filename: github-metrics/base.svg
+          # Your GitHub token
+          token: ${{ secrets.METRICS_TOKEN }}
+          # Options
           user: GamerMMM
           template: classic
-          base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
-          plugin_calendar: yes
-          plugin_calendar_limit: 1
+          base: "header, activity, community, repositories"
+          # 此插件为文档中的 🧮 Repositories traffic
+          plugin_traffic: yes
+          # 此插件为文档中的 👨‍💻 Lines of code changed
+          plugin_lines: yes
+          # 此插件为文档中的 🙋 Introduction
+          plugin_introduction: yes
+          # 此插件为文档中的 🎫 Gists
+          plugin_gists: yes
+          # 此插件为文档中的 💫 Star lists
+          # plugin_starlists: yes
+          # plugin_starlists_limit_repositories: 2
+          # plugin_starlists_languages: yes
+          # plugin_starlists_limit_languages: 8
+          # plugin_starlists_only: Awesome
 
+      # 📅 Isometric commit calendar
+      - name: Full-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/isocalendar.fullyear.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          # 不添加基础信息
+          base: ""
+          # 使用此插件
+          plugin_isocalendar: yes
+          # 设置成显示整年
+          plugin_isocalendar_duration: full-year
+
+      # 🈷️ Languages activity
+      - name: Indepth analysis
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/languages.indepth.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+            gnuplot
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size
+          plugin_languages_limit: 4
+          plugin_languages_analysis_timeout: 15
+
+      # ✨ Stargazers
+      - name: Using chartist charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/stargazers.chartist.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_stargazers: yes
+          plugin_stargazers_charts_type: chartist
+
+      # 🌟 Recently starred repositories
+      - name: Recently starred
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/stars.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_stars: yes
+          plugin_stars_limit: 10
+
+      # 💡 Coding habits and activity
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/habits.charts.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: Europe/Paris
+
+      # 🎟️ Follow-up of issues and pull requests
+      - name: Indepth analysis
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/followup.indepth.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_indepth: yes
+
+      # 📓 Featured repositories
+      - name: Pinned repositories
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/repositories.pinned.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_repositories: yes
+          plugin_repositories_pinned: 2
+
+      # 💬 Discussions
+      - name: GitHub Discussions
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/discussions.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_discussions: yes
+          plugin_discussions_categories_limit: 8
+
+      # 📆 Commit calendar
+      - name: Full history calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: github-metrics/calendar.full.svg
+          token: ${{ secrets.METRICS_ACTIOPN }}
+          base: ""
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
